--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">ciph</string>
+    <string name="cipher_label">CIPHER</string>
+    <string name="message_hint_label">Message</string>
+    <string name="error_empty">Message empty</string>
 </resources>
